1.08-Project-v0.5/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: simple-todo-app
  ports:
    - port: 8787
      protocol: TCP
      targetPort: 8080
