1.08-Project-v0.5/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: simple-todo-app-svc
              servicePort: 8787
